Added title to website

--- a/ggj2019.html
+++ b/ggj2019.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="apple-mobile-web-app-title" content="Game Title"> <!-- <= WEBAPP TITLE -->
+	<meta name="apple-mobile-web-app-title" content="Tambler: Pulisci L'Internet"> <!-- <= WEBAPP TITLE -->
 	<link rel="apple-touch-icon" href="icon.png"> <!-- <= YOUR ICON -->
 	<link rel="icon" href="icon.png"> <!-- <= YOUR ICON -->
 	<!--
@@ -19,9 +19,9 @@
     ----------
     There are many different resolutions for different devices supported or recommended,
     but I wanted this template to be easy to use "manually" and for me it works fine
-    to have a single PNG icon at 200x200. (200x200 is the minimum for facebok-sharing to use the og:image as thumbnail)
+    to have a single PNG icon at 200x200. (200x20git0 is the minimum for facebok-sharing to use the og:image as thumbnail)
   -->
-	<title>Game Title</title> <!-- <= WEBSITE TITLE -->
+	<title>Tambler: Pulisci L'Internet</title> <!-- <= WEBSITE TITLE -->
 	<meta name="description" content="Game description"> <!-- <= SITE DESCRIPTION as seen by web-search-engines -->
 
 	<!-- Info as seen by sharing apps like WhatsApp or Facebook, so they can show a preview-image and description when you share the URL -->
