--- a/ggj2019_mobile.html
+++ b/ggj2019_mobile.html
@@ -40,7 +40,7 @@
       --btnIcon--pressed: #111111;
       --btn__analogBg: #232f37;
     }
-    body { height: 100vh; font-family: Verdana, Arial, sans-serif; padding: 0; margin: 0; outline: none; background: #000; overflow: hidden; position: fixed; }
+    body { height: 100vh; font-family: Verdana, Arial, sans-serif; padding: 0; margin: 0; outline: none; background: #000; overflow: hidden; }
     /* ------ POSITION GAME-CANVAS ------ */
     canvas#canvas {
       width: 512px; height: 512px;                /* max game size: 512px */
